# Logo_Detection

./: .gitignore  README.md  main.ipynb  requirements.txt  requirements.txt.txt  setup.cfg
