[metadata]
name = LogoDetection
version = 0.1.0
description = "A package to custom train a logo detection model, and apply it to new image data"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm
install_requires =
    pandas == 1.4.4
    numpy == 1.23.3
    scikit-learn == 1.1.2
    Pillow

[options.packages.find]
where = src